# Assignments

./: .gitignore  Dockerfile  main.py  pyproject.toml
env/: pyvenv.cfg
env/Scripts/: activate  activate.bat
