[tool.poetry]
name = "to-do"
version = "1"
description = "an api to-do"
authors = ["sam"]
readme = "README.md"
packages = [{include = "to_do"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.1"
uvicorn = "^0.22.0"
pydantic = "^1.10.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
